--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@vitejs/plugin-vue": "^4.0.0",
         "font-awesome": "^4.7.0",
+        "sweetalert2": "^11.7.3",
         "vue": "^3.2.36",
         "vue-axios": "^3.5.2",
         "vue-loader": "^17.0.1",
